HHH-5986 - Refactor org.hibernate.util package for spi/internal split