@@ -23,6 +23,8 @@
  */
 package org.hibernate.engine.jdbc;
 
+import org.hibernate.engine.jdbc.spi.SqlExceptionHelper;
+
 import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.Proxy;
 import java.lang.reflect.Method;
@@ -32,8 +34,6 @@ import java.sql.SQLException;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
-import org.hibernate.util.JDBCExceptionReporter;
 
 /**
  * A proxy for a ResultSet delegate, responsible for locally caching the columnName-to-columnIndex resolution that
@@ -45,6 +45,7 @@ import org.hibernate.util.JDBCExceptionReporter;
 public class ResultSetWrapperProxy implements InvocationHandler {
 	private static final Logger log = LoggerFactory.getLogger( ResultSetWrapperProxy.class );
 	private static final Class[] PROXY_INTERFACES = new Class[] { ResultSet.class };
+	private static final SqlExceptionHelper sqlExceptionHelper = new SqlExceptionHelper();
 
 	private final ResultSet rs;
 	private final ColumnNameCache columnNameCache;
@@ -83,12 +84,11 @@ public class ResultSetWrapperProxy implements InvocationHandler {
 		return cl;
 	}
 
-	/**
-	 * {@inheritDoc}
-	 */
+	@Override
+	@SuppressWarnings( {"UnnecessaryBoxing"})
 	public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
 		if ( "findColumn".equals( method.getName() ) ) {
-			return new Integer( findColumn( ( String ) args[0] ) );
+			return Integer.valueOf( findColumn( ( String ) args[0] ) );
 		}
 
 		if ( isFirstArgColumnLabel( method, args ) ) {
@@ -107,7 +107,7 @@ public class ResultSetWrapperProxy implements InvocationHandler {
 						.append( "] as first argument for method: [" )
 						.append( method )
 						.append( "]" );
-				JDBCExceptionReporter.logExceptions( ex, buf.toString() );
+				sqlExceptionHelper.logExceptions( ex, buf.toString() );
 			}
 			catch ( NoSuchMethodException ex ) {
 				StringBuffer buf = new StringBuffer()
@@ -176,9 +176,10 @@ public class ResultSetWrapperProxy implements InvocationHandler {
 		return columnNameMethod.getDeclaringClass().getMethod( columnNameMethod.getName(), actualParameterTypes );
 	}
 
+	@SuppressWarnings( {"UnnecessaryBoxing"})
 	private Object[] buildColumnIndexMethodArgs(Object[] incomingArgs, int columnIndex) {
 		Object actualArgs[] = new Object[incomingArgs.length];
-		actualArgs[0] = new Integer( columnIndex );
+		actualArgs[0] = Integer.valueOf( columnIndex );
 		System.arraycopy( incomingArgs, 1, actualArgs, 1, incomingArgs.length - 1 );
 		return actualArgs;
 	}
